syntax = "proto3";

package api;
option csharp_namespace = "API.Interfaces";

import "social_network_provider.proto";

message SocialMediaAccountDto {
    SocialNetworkProviderType type = 3;
    string displayName = 4 ;
    int32 socialNetworkProviderId = 5;

    /* Further info. May have null values. Most data isn't always shared. */
    /// Url to the actual social media profile
    string profileUrl = 6;
    string description = 7;
    string email = 8;
    string userId = 9;

    // The I think we should go away from showing follower counts to a sort of rating
    int32 audienceSize = 10;
    int32 postCount = 11;
    bool verified = 12;

    // Not all of them will be set
    // meaning depends on the type of Social Network Provider
    string accessToken = 13;
    string accessTokenSecret = 14;
    string refreshToken = 15;
}